# catmux

./: .gitignore  LICENSE  README.md  catmux_main.py  install.sh  pyproject.toml  setup_permissions.sh
catmux/: __init__.py  broker.py  framer.py  mirror.py  vport.py
config/: ft991a.toml  ic7100.toml  kx3.toml
docs/: README.md  configuration.md  systemd.md  troubleshooting.md  tty0tty.md  udev.md
systemd/: catmux.service  tty0tty.service
