[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "catmux"
version     = "0.1.0"
description = "CAT serial multiplexer for amateur radio transceivers"
readme      = "README.md"
license     = {text = "MIT"}
requires-python = ">=3.11"

keywords = ["amateur radio", "ham radio", "CAT", "CI-V", "serial", "yaesu", "icom", "elecraft"]

dependencies = [
    "pyserial>=3.5",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
catmux = "catmux_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["catmux*"]
